- Added scrolling to tab bars when there isn't enough space
- Added a search bar to storage and inventory windows
- Added chat logging
- Added a screen shake effect when the character dies
- Added item quantity in the shop list
- Added customizable hit and attack effects
- Added support for floor item sprites
- Added support for different target cursor sizes for NPCs
- Added support for 'zlib' compressed layer data and 'CSV' layer data
- Added background support to the equipment boxes
- Added offsetX/Y to 'imageset' element that applies to all its frames
- Made it possible to separate the dye colors for particle effects
- Emotes are now customizable particle effects
- Allow resizing of the game in windowed mode
- Layered sprites are now buffered for performance and overlay support
- Announcements now go to the active chat tab in addition to global chat
- Fade out music when switching maps
- Stream music files directly from the archives
- Changed the window buttons to use icons
- Show selected target name with bold font
- Sounds that are further away are now more silent
- The NPC dialog can now be closed while it is waiting on the server
- Replaced '> Next' in NPC dialogs with just an empty line
- Made the update window bigger and resizable
- Removed auto-untargeting after fighting for a minute
- Fixed the chat bubble position
- Fixed losing the active target when pressing target+attack while moving
- Fixed 'switch character' action after choosing character on command line
- Fixed hair colors and styles handling
- Fixed interpretation of collision layer with flipped tiles
- Many changes and fixes to manaserv support, which is still experimental

0.5.3 (11 September 2011)
- Fixed endless loop when a sprite definition promises too many images
- Fixed crash when selecting a character that has a Dark Talisman equipped
- Fixed drawing glitch with overwide tiles
- Fixed scaling of overlays in OpenGL mode
- Fixed building without OpenGL

0.5.2 (17 April 2011)