@@ -1,9 +1,9 @@
 
 ##1                      M  A  N  A      C L I E N T
-##1               ==========================================
+##1               =========================================
 
-           ##2Version:##6 0.6.0          ##2Date:##3 .. February 2012
+             ##2Version:##0 0.6.0          ##2Date:##0 .. February 2012
 
-##2                    Website: http://manasource.org
+##2                    Website:##0 http://manasource.org
 
 
