@@ -4,9 +4,10 @@
 ##3                            === WINDOWS ===
  
 ##2SHORTCUT:
-
+##0
  To add an item to the shortcut bar click on the item in the inventory window,
  then click on the box in the shortcut-window which should be associated with
  the item. To reorder items within the shortcut-window simply click and drag
  them between the boxes. To remove items you simply drag them outside of the
  window and drop them.
+
