@@ -2,6 +2,7 @@
 
 
 ##3                         === RECENT CHANGES ===
+##0
  0.6.0 (.. February 2012)
  - Added support for a larger number of character slots
  - Added scrolling to tab bars when there isn't enough space
@@ -12,12 +13,12 @@
  - Added customizable hit and attack effects
  - Added support for floor item sprites
  - Added support for different target cursor sizes for NPCs
- - Added support for 'zlib' compressed layer data and 'CSV' layer data
  - Added background support to the equipment boxes
  - Added offsetX/Y to 'imageset' element that applies to all its frames
  - Made it possible to separate the dye colors for particle effects
  - Emotes are now customizable particle effects
  - Allow resizing of the game in windowed mode
+ - Allow switching between windowed and fullscreen without restart
  - Layered sprites are now buffered for performance and overlay support
  - Announcements now go to the active chat tab in addition to global chat
  - Fade out music when switching maps
@@ -34,7 +35,9 @@
  - Fixed 'switch character' action after choosing character on command line
  - Fixed hair colors and styles handling
  - Fixed interpretation of collision layer with flipped tiles
+ - Fixed searching for wallpapers on 64-bit machines
  - Many changes and fixes to manaserv support, which is still experimental
+ - Updated the German translation
 
  0.5.3 (11 September 2011)
  - Fixed endless loop when a sprite definition promises too many images
@@ -126,57 +129,4 @@
  - Fixed a problem with the player skipping corners, desyncing from the server
  - Small optimizations to OpenGL mode when drawing certain GUI widgets
  - Updated Spanish, Polish, Portugese, Swedish, French and German translations
-
- 0.0.29 (13 May 2009)
- - Added support for dynamic emotes and a new way to select them
- - Added speech balloons that wrap the text
- - Added item popup for showing detailed information
- - Added ability to refer to items in chat
- - Added the ability to see your own name in game
- - Added the option to hide player names
- - Added support for dynamically defined weight unit and currency
- - Added support for NPC item storage
- - Added compile-time support for tmwserv, as an alternative to eAthena
- - Added support for entering the port of the login server
- - Added support for creating parties and inviting other players to them
- - Added tabs to the chat window for party and private chats
- - Added ability to set initial player attributes when creating a new character
- - Added command line option to temporarily disable OpenGL (--no-opengl)
- - Added support for showing arrows flying through the air
- - Added option to show pickup as text particle instead of in the chat
- - Added ability to change the font size
- - Added support for the /me command to do actions
- - Added a /present command to show players present in the area
- - Added ability to record the chatlog to a file
- - Made emote shortcuts customizable in more detail
- - Made it possible to change resolution
- - Made many colors used by the game configurable
- - Made setup window available during login
- - Dynamically generate the item effects description
- - Minimap can now be told to stay on the screen
- - Minimap now adapts to the scale and size of the minimap image
- - Non-stackable items can now be sold more easily
- - Login dialog now remembers the list of recently used servers
- - Completely rewritten NPC interaction
- - GUI opacity now effects the whole user interface
- - Redesigned the trade window
- - Redesigned equipment window and allow unequip from there
- - Next level percentage is now displayed in hundredths
- - The player will no longer walk away when clicking the map while sitting
- - Keep the login screen from taking 100% CPU
- - No longer prompt for character server when there is only one
- - Fixed compilation with GCC 4.4
- - Fixed scroll wheel handling and dragging glitches in lists
- - Many more bug fixes, small improvements and code cleanups
- - Updated German, Finnish, Croatian, French, Spanish, Swedish and Polish
-   translations
-
- 0.0.28.1 (12 February 2009)
- - Enabled translations on Windows
- - Added command line option to set home directory path
- - Tweaked green chat color to be a bit more readable
- - Made font size configurable in the config file
- - Fixed restoring of punching animation after weapon removal
- - Fixed inability to chat while talking to NPCs
- - Updated Swedish translation
 
